# protect-exec

./: .gitignore  Cargo.toml  LICENSE  build.sh  readme.md
protect/: Cargo.toml
protect-common/: Cargo.toml
protect-common/src/: lib.rs
protect-ebpf/: Cargo.toml
protect-ebpf/.cargo/: config.toml
protect-ebpf/src/: exec.rs  kill.rs  macros.rs  main.rs  tools.rs  vmlinuz.rs
protect/src/: black_list.rs  event.rs  main.rs  setup.rs  version.rs
xtask/src/: build_ebpf.rs  main.rs  run.rs
