[package]
name = "protect-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-log-ebpf = {workspace = true}
num_enum = {workspace = true}
derive_more ={ workspace = true, features = ["display"]}
[lib]
path = "src/lib.rs"
