[package]
name = "protect-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { workspace = true}
aya-log-ebpf = { workspace = true}
protect-common = { path = "../protect-common" }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "protect-ebpf"
path = "src/main.rs"
