[package]
name = "protect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
protect-common = { path = "../protect-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.1"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.5.0"
prettytable = "0.10.0"
users = "0.11.0"
clap = { version = "4.4.18", features = ["derive", "color"] }
walkdir = "2.4.0"

[[bin]]
name = "protect"
path = "src/main.rs"
