[package]
name = "protect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { workspace = true, features = [] }
aya-log = { workspace = true }
protect-common = { path = "../protect-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.9"
libc = "0.2.181"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1.11.1"
prettytable = "0.10.0"
users = "0.11.0"
clap = { version = "4.5.58", features = ["derive", "color"] }
walkdir = "2.5.0"

[[bin]]
name = "protect"
path = "src/main.rs"
